--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "imagemin": "imagemin img/* --out-dir='dist/img'",
     "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html",
     "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin"
-    
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cssmin": "^0.4.3",
+    "grunt": "^1.0.4",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^2.1.0",
     "htmlmin": "0.0.7",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "onchange": "6.1.0",
     "parallelshell": "3.0.2",
     "rimraf": "^2.6.2",
+    "time-grunt": "^1.4.0",
     "uglifyjs": "^2.4.11",
     "usemin-cli": "^0.5.1"
   },
@@ -34,8 +39,11 @@
     "accordion": "^3.0.2",
     "bootstrap": "^4.4.1",
     "bootstrap-social": "^5.1.1",
+    "datepicker": "0.0.0",
+    "datetimepicker": "^0.1.39",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "js-datepicker": "^5.2.1",
     "popper.js": "^1.16.0"
   }
 }
