--- a/package.json
+++ b/package.json
@@ -27,30 +27,33 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-htmlmin": "^2.4.0",
-    "grunt-contrib-imagemin": "^2.0.1",
+    "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-filerev": "^2.3.1",
-    "grunt-sass": "^2.1.0",
-    "grunt-usemin": "^3.1.1",
+    "grunt-sass": "^3.1.0",
+    "grunt-usemin": "^0.1.13",
     "htmlmin": "0.0.7",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^6.0.1",
     "onchange": "6.1.0",
     "parallelshell": "3.0.2",
     "rimraf": "^2.6.2",
     "time-grunt": "^1.4.0",
     "uglifyjs": "^2.4.11",
-    "usemin-cli": "^0.5.1"
+    "usemin-cli": "^0.6.0"
   },
   "dependencies": {
     "accordion": "^3.0.2",
     "bootstrap": "^4.4.1",
     "bootstrap-social": "^5.1.1",
+    "copyfiles": "^2.4.1",
+    "copyfonts": "^1.0.0",
     "datepicker": "0.0.0",
     "datetimepicker": "^0.1.39",
     "font-awesome": "^4.7.0",
+    "imagemin": "^8.0.1",
     "jquery": "^3.5.0",
     "js-datepicker": "^5.2.1",
     "popper.js": "^1.16.0"
